[gd_scene load_steps=21 format=3 uid="uid://bus5n18gsp1ad"]

[ext_resource type="Script" path="res://scripts/wind_spirit.gd" id="1_u86kq"]
[ext_resource type="Texture2D" uid="uid://6ur4g7pe24ap" path="res://assets/sprites/chars/spr_wind_spirit.png" id="2_v4mar"]
[ext_resource type="AudioStream" uid="uid://b1pt3uc7c7vaf" path="res://assets/sfx/snd_wind_spirit_hurt.wav" id="3_0xjtr"]
[ext_resource type="AudioStream" uid="uid://dko557q8r321m" path="res://assets/sfx/snd_wind_spirit_death.wav" id="4_xe5pk"]
[ext_resource type="PackedScene" uid="uid://dnwt0qqjgh7f0" path="res://scenes/fx/wind_spirit_tornado.tscn" id="5_6hqdy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8lpbv"]
atlas = ExtResource("2_v4mar")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij8se"]
atlas = ExtResource("2_v4mar")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbba5"]
atlas = ExtResource("2_v4mar")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c08ai"]
atlas = ExtResource("2_v4mar")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kklo"]
atlas = ExtResource("2_v4mar")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iqn3"]
atlas = ExtResource("2_v4mar")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i1as"]
atlas = ExtResource("2_v4mar")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe7h8"]
atlas = ExtResource("2_v4mar")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tq2ml"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lpbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij8se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbba5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c08ai")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kklo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iqn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i1as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe7h8")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_5pl8n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0arq5"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_kp34c"]
resource_name = "hit"
length = 0.1
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fw0lg"]
_data = {
"RESET": SubResource("Animation_5pl8n"),
"death": SubResource("Animation_0arq5"),
"hit": SubResource("Animation_kp34c")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_6m1gi"]
radius = 146.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ag7sg"]
radius = 4.0
height = 8.0

[node name="WindSpirit" type="Area2D" groups=["enemies", "players"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_u86kq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_tq2ml")
animation = &"attack"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fw0lg")
}

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DetectionRange" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_6m1gi")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ag7sg")

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0xjtr")
bus = &"SFX"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xe5pk")
bus = &"SFX"

[node name="HurtInvicibilityTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="InitialWaitBeforeFiring" type="Timer" parent="."]

[node name="WindSpiritTornado" parent="." instance=ExtResource("5_6hqdy")]
top_level = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="HurtInvicibilityTimer" to="." method="_on_hurt_invicibility_timer_timeout"]
[connection signal="timeout" from="InitialWaitBeforeFiring" to="." method="_on_initial_wait_before_firing_timeout"]
